@@ -13,11 +13,11 @@ import java.util.Optional;
  * @author brucejohnson
  */
 public class SeqFragment {
-    static private double spinSysProbability = 0.02;
+    static private final double spinSysProbability = 0.02;
 
-    static private double fragmentScoreProbability = 0.1;
-    static private int lastID = -1;
-    int id = 0;
+    private static double fragmentScoreProbability = 0.1;
+    private static int lastID = -1;
+    int id;
     List<SpinSystemMatch> spinSystemMatches = new ArrayList<>();
     ResidueSeqScore resSeqScore = null;
     boolean frozen = false;
@@ -137,7 +137,7 @@ public class SeqFragment {
 
         } else {
             result = spinSysB.fragment().get();
-            result.spinSystemMatches.add(0, spinSysMatch);
+            result.spinSystemMatches.addFirst(spinSysMatch);
             if (spinSysB.fragment().get().isFrozen()) {
                 newFrozen = true;
             }
@@ -160,7 +160,7 @@ public class SeqFragment {
 
     public List<SpinSystem> getSpinSystems() {
         List<SpinSystem> spinSystems = new ArrayList<>();
-        spinSystems.add(spinSystemMatches.get(0).getSpinSystemA());
+        spinSystems.add(spinSystemMatches.getFirst().getSpinSystemA());
         for (var match : spinSystemMatches) {
             spinSystems.add(match.getSpinSystemB());
         }
@@ -170,7 +170,7 @@ public class SeqFragment {
     public SpinSystem getSpinSystem(int index) {
         SpinSystem spinSystem;
         if (index < 2) {
-            spinSystem = spinSystemMatches.get(0).getSpinSystemA();
+            spinSystem = spinSystemMatches.getFirst().getSpinSystemA();
         } else {
             spinSystem = spinSystemMatches.get(index - 2).getSpinSystemB();
         }
@@ -192,17 +192,17 @@ public class SeqFragment {
             SeqFragment currentFragment = spinSysA.fragment().get();
             List<SpinSystemMatch> spinSystemMatches = currentFragment.spinSystemMatches;
 
-            SpinSystemMatch firstMatch = spinSystemMatches.get(0);
-            SpinSystemMatch lastMatch = spinSystemMatches.get(spinSystemMatches.size() - 1);
+            SpinSystemMatch firstMatch = spinSystemMatches.getFirst();
+            SpinSystemMatch lastMatch = spinSystemMatches.getLast();
             spinSysMatch.spinSystemA.setFragment(null);
             spinSysMatch.spinSystemB.setFragment(null);
             if (spinSysMatch == firstMatch) {
-                spinSystemMatches.remove(0);
+                spinSystemMatches.removeFirst();
                 result.add(null);
                 result.add(currentFragment);
                 currentFragment.updateFragment();
             } else if (spinSysMatch == lastMatch) {
-                spinSystemMatches.remove(spinSystemMatches.size() - 1);
+                spinSystemMatches.removeLast();
                 currentFragment.updateFragment();
                 result.add(currentFragment);
                 result.add(null);
@@ -242,8 +242,8 @@ public class SeqFragment {
     void updateScore() {
         var resSeqScores = scoreShifts(Molecule.getActive());
         if (resSeqScores.size() == 1) {
-            freezeFragment(resSeqScores.get(0));
-            setResSeqScore(resSeqScores.get(0));
+            freezeFragment(resSeqScores.getFirst());
+            setResSeqScore(resSeqScores.getFirst());
         }
 
     }
@@ -255,7 +255,7 @@ public class SeqFragment {
         }
         var resSeqScores = scoreShifts(Molecule.getActive());
         if (resSeqScores.size() == 1) {
-            setResSeqScore(resSeqScores.get(0));
+            setResSeqScore(resSeqScores.getFirst());
         }
     }
 
@@ -263,7 +263,7 @@ public class SeqFragment {
         List<SpinSystemMatch> newMatches = new ArrayList<>();
         for (SpinSystemMatch spinSystemMatch : spinSystemMatches) {
             SpinSystem systemA = spinSystemMatch.getSpinSystemA();
-            systemA.confirmS().ifPresent(match -> newMatches.add(match));
+            systemA.confirmS().ifPresent(newMatches::add);
         }
         spinSystemMatches.clear();
         spinSystemMatches.addAll(newMatches);
@@ -271,7 +271,7 @@ public class SeqFragment {
 
     boolean addNext(SpinSystemMatch spinSysMatch) {
         boolean result = false;
-        if (spinSystemMatches.isEmpty() || (spinSysMatch.spinSystemA == spinSystemMatches.get(spinSystemMatches.size() - 1).spinSystemB)) {
+        if (spinSystemMatches.isEmpty() || (spinSysMatch.spinSystemA == spinSystemMatches.getLast().spinSystemB)) {
             spinSystemMatches.add(spinSysMatch);
             result = true;
         }
@@ -437,12 +437,9 @@ public class SeqFragment {
         for (int i = 0; i < n; i++) {
             boolean ok = true;
             double pScore = 1.0;
-            boolean isCurrent = false;
             if ((fragment != null) && (fragment.isFrozen())) {
                 if (fragment.getResSeqScore().getFirstResidue() != residues.get(i)) {
                     continue;
-                } else {
-                    isCurrent = true;
                 }
             }
             for (int j = 0; j < winSize; j++) {
@@ -510,10 +507,10 @@ public class SeqFragment {
             residue = residue.getNext();
         }
         residue = firstResidue.getNext();
-        spinSystemMatches.get(0).getSpinSystemA().assignPeaksInSystem(residue);
-        for (int i = 0; i < spinSystemMatches.size(); i++) {
+        spinSystemMatches.getFirst().getSpinSystemA().assignPeaksInSystem(residue);
+        for (SpinSystemMatch spinSystemMatch : spinSystemMatches) {
             residue = residue.getNext();
-            spinSystemMatches.get(i).getSpinSystemB().assignPeaksInSystem(residue);
+            spinSystemMatch.getSpinSystemB().assignPeaksInSystem(residue);
         }
     }
 
@@ -555,8 +552,7 @@ public class SeqFragment {
     }
 
     public Residue getResidueAtPostion(int pos) {
-        Residue firstResidue = resSeqScore.getFirstResidue();
-        Residue residue = firstResidue;
+        Residue residue = resSeqScore.getFirstResidue();
         for (int i = 0; i < pos; i++) {
             residue = residue.getNext();
         }
